Add get account details endpoint
